@startuml

title __SWING's Class Diagram__\n

  namespace org.heckcorp.spacegame {
    namespace swing {
      class org.heckcorp.spacegame.swing.HexDescriptionPanel {
          - locationLabel : JLabel
          - ownerLabel : JLabel
          - productionLabel : JLabel
          - unitsBox : Box
          + HexDescriptionPanel()
          + setHex()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace swing {
      class org.heckcorp.spacegame.swing.HexDescriptionPanel.UnitDescriptionPanel {
          + UnitDescriptionPanel()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace swing {
      class org.heckcorp.spacegame.swing.SwingView {
          - log : Logger
          + SwingView()
          + addUnit()
          + attack()
          + initialize()
          + message()
          + move()
          + selectHex()
          + setCurrentPlayer()
          + setMap()
          + setMonitor()
          + setStatus()
          + setWinningPlayer()
          - getMap()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace swing {
      class org.heckcorp.spacegame.swing.SwingView.DisplayManager {
          + DisplayManager()
          + displayPositions()
          + hideAttackArrow()
          + hideSelection()
          + invalidateMapViews()
          + moveCounter()
          + moveToFront()
          + pause()
          + setCounterStatus()
          + setCounterVisibility()
          + showAttackArrow()
          + showCounter()
          - invokeAndWait()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace swing {
      class org.heckcorp.spacegame.swing.SwingView.UIManager {
          - textArea : JTextArea
          - textScrollPane : JScrollPane
          + UIManager()
          + clearTextArea()
          + getMapView()
          + getMiniMap()
          + getUnitIcon()
          + initialize()
          + message()
          - createCounter()
      }
    }
  }
  

  namespace org.heckcorp.spacegame {
    namespace swing {
      class org.heckcorp.spacegame.swing.SwingView.ViewDataManager {
          ~ unitsToCounters : BiMap<Unit, Counter>
          + addUnit()
          + getCounter()
      }
    }
  }
  

  org.heckcorp.spacegame.swing.HexDescriptionPanel -up-|> javax.swing.JPanel
  org.heckcorp.spacegame.swing.HexDescriptionPanel o-- org.heckcorp.spacegame.swing.SwingView.UIManager : uiManager
  org.heckcorp.spacegame.swing.HexDescriptionPanel +-down- org.heckcorp.spacegame.swing.HexDescriptionPanel.UnitDescriptionPanel
  org.heckcorp.spacegame.swing.HexDescriptionPanel.UnitDescriptionPanel -up-|> javax.swing.JPanel
  org.heckcorp.spacegame.swing.HexDescriptionPanel.UnitDescriptionPanel o-- org.heckcorp.spacegame.Unit : unit
  org.heckcorp.spacegame.swing.SwingView .up.|> org.heckcorp.spacegame.GameView
  org.heckcorp.spacegame.swing.SwingView -up-|> javax.swing.JPanel
  org.heckcorp.spacegame.swing.SwingView o-- org.heckcorp.spacegame.swing.SwingView.ViewDataManager : dataManager
  org.heckcorp.spacegame.swing.SwingView o-- org.heckcorp.spacegame.swing.SwingView.DisplayManager : displayManager
  org.heckcorp.spacegame.swing.SwingView o-- org.heckcorp.spacegame.map.HexMap : map
  org.heckcorp.spacegame.swing.SwingView o-- org.heckcorp.spacegame.map.swing.ViewMonitor : monitor
  org.heckcorp.spacegame.swing.SwingView o-- org.heckcorp.spacegame.map.swing.UIResources : resources
  org.heckcorp.spacegame.swing.SwingView o-- org.heckcorp.spacegame.swing.SwingView.UIManager : uiManager
  org.heckcorp.spacegame.swing.SwingView +-down- org.heckcorp.spacegame.swing.SwingView.DisplayManager
  org.heckcorp.spacegame.swing.SwingView +-down- org.heckcorp.spacegame.swing.SwingView.UIManager
  org.heckcorp.spacegame.swing.SwingView +-down- org.heckcorp.spacegame.swing.SwingView.ViewDataManager
  org.heckcorp.spacegame.swing.SwingView.DisplayManager o-- org.heckcorp.spacegame.map.swing.MapView : mapView
  org.heckcorp.spacegame.swing.SwingView.DisplayManager o-- org.heckcorp.spacegame.map.swing.MiniMap : miniMap
  org.heckcorp.spacegame.swing.SwingView.UIManager -up-|> javax.swing.JPanel
  org.heckcorp.spacegame.swing.SwingView.UIManager o-- org.heckcorp.spacegame.swing.HexDescriptionPanel : hexDescriptionPanel
  org.heckcorp.spacegame.swing.SwingView.UIManager o-- org.heckcorp.spacegame.map.swing.MapView : mapView
  org.heckcorp.spacegame.swing.SwingView.UIManager o-- org.heckcorp.spacegame.map.swing.MiniMap : miniMap


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
